fix z-index on mobile

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -35,11 +35,11 @@ hr {
 }
 
 .medium-zoom--opened .medium-zoom-overlay {
-  z-index: 1;
+  z-index: 3;
 }
 
 .medium-zoom-image--opened {
-  z-index: 2;
+  z-index: 4;
 }
 
 article figcaption {
